--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,12 @@ hr{
 
 .title {
     font-size: 48px;
-    margin-bottom: 39px;
+    margin-bottom: 36px;
+    font-weight: 700;
+}
+
+.title-h2 {
+    font-size: 24px;
     font-weight: 700;
 }
 
@@ -135,7 +140,102 @@ hr{
     color: #333333
 }
 
+.bg-white{
+    background-color: #ffffff;
+}
 
+.bg-green{
+    background-color: #6dc05d;
+    color:#ffffff;
+    padding: 15px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.bg-green-item{
+    flex: 0 0 60%; 
+}
 
+.bg-green-img{
+    flex: 0 0 40%;
+    text-align: center;
+}
+
+.bg-green h3{
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 0;
+}
+
+.bg-green input{
+    font-size: 14px;
+    border: 1px solid #ffffff;
+    border-radius: 20px;
+    padding: 10px 15px ;
+}
+
+.bg-green btn{
+   display: block;
+   text-align: center;
+   max-width: 150px;
+}
+
+.catalog{
+    padding-top: 100px;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 0 30px;
+}
+
+.grid-item-title{
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+
+.grid-item-img{
+    grid-column: 4/5;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+.grid-item-left{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+.grid-item-right{
+    grid-column: 3/5;
+    grid-row: 3/4;
+}
+
+.grid-item-catalog{
+    text-align:center;
+    padding: 15px;
+}
+
+.grid-item-catalog .bg-white{
+      padding: 15px 30px;
+}
+
+.grid-price{
+    font-size:21px;
+    font-weight: 500;
+}
+
+.grid-btn{
+    font-size: 14px;
+    border-radius: 20px;
+    border: 2px solid #6dc05d;
+    background-color: #6dc05d;
+    color:#ffffff;
+    text-decoration: none;
+    padding: 10px 25px;
+   
+    transition: 0.2s ease;
+    cursor: pointer; 
+}
 
