--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Roboto", sans-serif;
     background-color: #efefef;
-    color: black;
+    color: #333333;
     font-size: 14px;
 }
 
@@ -17,46 +17,54 @@ body {
     justify-content: center;
     list-style-type: none;
     padding: 4px 0;
+    flex-wrap: wrap;
+    margin-bottom: 4px;
 }
 
 .nav > li {
     margin-left: 15px;
     margin-right: 15px;
+    margin-bottom: 10px;
 }
 
 .nav > li > a {
     text-decoration: none;
-    color: black;
+    color: #333333;
+    transition: 0.2s ease;
+}
+
+.nav > li > a:hover {
+    color: #66c05d;
 }
 
 .header {
-    background-color: #ffffff;
-    /* padding-top: 5px; */
+    background-color: #fff;
+    padding-top: inherit;
+    padding-top: 4px;
 }
 
 .header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 19px 0px 12px 0;
+    padding: 15px 0 12px 0;
 }
 
 .logo {
-    color: #6dc05d;
+    color: #66c05d;
     font-size: 36px;
     font-weight: 700;
-    display:flex;
+    display: flex;
     align-items: center;
-    margin-right: 10px;
     letter-spacing: 4px;
 }
 
-.logo-image{
-    margin-right: 20px;
-    display:block;
+.logo-image {
+    display: block;
     width: 80px;
     height: 80px;
     background-image: url(../img/logo.svg);
+    margin-right: 20px;
 }
 
 .header-info span {
@@ -65,21 +73,23 @@ body {
 
 .header-info button {
     font-size: 14px;
+    color: #333333;
     border-radius: 20px;
-    border: 2px solid #6dc05d;
+    border: 2px solid #66c05d;
     background-color: transparent;
     padding: 10px 25px;
-    margin-left: 35px;
+    margin-left: 36px;
     transition: 0.2s ease;
     cursor: pointer;
 }
 
-.header-info button:hover{
-    background-color: #6dc05d;
+.header-info button:hover {
+    background-color: #66c05d;
+    color: #fff;
 }
 
-.header-bottom{
-    padding: 20px 0 27px 0;
+.header-bottom {
+    padding: 20px 0 17px 0;
 }
 
 .header-bottom .nav {
@@ -87,36 +97,31 @@ body {
     margin: 0;
 }
 
-.header-bottom .nav >li{
+.header-bottom .nav > li {
     margin-left: 20px;
     margin-right: 20px;
 }
 
-hr{
+hr {
     border: none;
     background-color: #efefef;
     height: 1px;
 }
 
-.banner{
+.banner {
     background-image: url(../img/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
     padding-top: 159px;
     padding-bottom: 204px;
-    color: #ffffff;
-}
-.banner p{
-    margin-bottom: 57px;
-    max-width: 315px;
-    line-height: 1.5;
+    color: #fff;
 }
 
 .title {
     font-size: 48px;
-    margin-bottom: 36px;
     font-weight: 700;
+    margin-bottom: 39px;
 }
 
 .title-h2 {
@@ -124,118 +129,153 @@ hr{
     font-weight: 700;
 }
 
-.btn{
-    border-radius: 20px;
-    border: 2px solid #ffffff;
-    background-color: transparent;
-    padding: 10px 15px;
-    color: #ffffff;
-    padding: 9px 47px;
+.banner p {
+    margin-bottom: 57px;
+    max-width: 315px;
+    line-height: 1.5;
+}
+
+.btn {
+    color: #fff;
     text-decoration: none;
+    border-radius: 20px;
+    border: 2px solid #fff;
+    background-color: transparent;
+    padding: 9px 47px;
     transition: 0.2s ease;
 }
 
-.btn:hover{
-    background-color: #ffffff;
-    color: #333333
+.btn:hover {
+    background-color: #fff;
+    color: #333333;
 }
 
-.bg-white{
-    background-color: #ffffff;
+.bg-white {
+    background-color: #fff;
 }
 
-.bg-green{
-    background-color: #6dc05d;
-    color:#ffffff;
-    padding: 15px 30px;
+.bg-green {
+    background-color: #66c05d;
+    color: #fff;
+    padding: 34px 41px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
 }
 
-.bg-green-item{
-    flex: 0 0 60%; 
+.bg-green-item {
+    flex: 0 0 55%;
 }
 
-.bg-green-img{
-    flex: 0 0 40%;
+.bg-green-img {
+    flex: 0 0 31%;
     text-align: center;
 }
 
-.bg-green h3{
+.bg-green h3 {
     font-size: 18px;
     font-weight: 700;
     margin-top: 0;
+    margin-bottom: 20px;
 }
 
-.bg-green input{
+.bg-green p {
+    line-height: 1.5;
+    margin-bottom: 24px;
+}
+
+.bg-green input {
     font-size: 14px;
-    border: 1px solid #ffffff;
+    border: 1px solid #fff;
     border-radius: 20px;
-    padding: 10px 15px ;
+    padding: 9px 15px;
+    width: 100%;
+    max-width: 225px;
+    box-sizing: border-box;
 }
 
-.bg-green btn{
-   display: block;
-   text-align: center;
-   max-width: 150px;
+.bg-green input:focus {
+    outline: none;
 }
 
-.catalog{
-    padding-top: 100px;
+.bg-green .btn {
+    display: block;
+    text-align: center;
+    max-width: 166px;
+    padding: 8px 0;
 }
 
-.grid{
+.catalog {
+    padding-top: 60px;
+    padding-bottom: 133px;
+}
+
+.grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 0 30px;
+    grid-gap: 19px 30px;
 }
 
-.grid-item-title{
-    grid-column: 1/4;
-    grid-row: 1/2;
+.grid-item-title {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
 }
 
-.grid-item-img{
-    grid-column: 4/5;
-    grid-row: 1/2;
+.grid-item-img {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
     text-align: center;
 }
 
-.grid-item-left{
-    grid-column: 1/3;
-    grid-row: 3/4;
+.grid-item-left {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+    margin-top: 80px;
 }
 
-.grid-item-right{
-    grid-column: 3/5;
-    grid-row: 3/4;
+.grid-item-right {
+    grid-column: 3 / 5;
+    grid-row: 3 / 4;
+    margin-top: 80px;
 }
 
-.grid-item-catalog{
-    text-align:center;
-    padding: 15px;
+.grid-item-catalog {
+    text-align: center;
 }
 
-.grid-item-catalog .bg-white{
-      padding: 15px 30px;
+.grid-item-catalog .bg-white {
+    padding: 23px 30px 34px 30px;
 }
 
-.grid-price{
-    font-size:21px;
+.thumb {
+    margin-bottom: 14px;
+}
+
+.grid-title {
+    line-height: 1.5;
+    margin-bottom: 0;
+}
+
+.grid-price {
+    font-size: 21px;
     font-weight: 500;
+    margin-top: 14px;
+    letter-spacing: 1px;
+    margin-bottom: 25px;
 }
 
-.grid-btn{
-    font-size: 14px;
-    border-radius: 20px;
-    border: 2px solid #6dc05d;
-    background-color: #6dc05d;
-    color:#ffffff;
+.grid-btn {
+    border-radius: 30px;
+    border: 2px solid #66c05d;
+    background-color: #66c05d;
+    color: #fff;
+    padding: 6px 41px;
     text-decoration: none;
-    padding: 10px 25px;
-   
     transition: 0.2s ease;
-    cursor: pointer; 
+    cursor: pointer;
 }
 
+.grid-btn:hover {
+    background-color: #fff;
+    color: #333333;
+}
