--- a/css/style.css
+++ b/css/style.css
@@ -279,3 +279,98 @@ hr {
     background-color: #fff;
     color: #333333;
 }
+
+.footer-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 25px;
+    padding-bottom: 20px;
+}
+
+.footer-info{
+    display: flex;
+    align-items: center;
+}
+
+.footer-info span {
+    font-size: 16px;
+    margin-left: 103px;
+}
+
+.footer-info span:first-child {
+    font-size: 14px;
+    margin-left: 0;
+}
+
+.footer-info button {
+    font-size: 14px;
+    color: #333333;
+    border-radius: 20px;
+    border: 2px solid #66c05d;
+    background-color: transparent;
+    padding: 10px 25px;
+    margin-left: 36px;
+    transition: 0.2s ease;
+    cursor: pointer;
+}
+
+.footer-info button:hover {
+    background-color: #66c05d;
+    color: #fff;
+}
+
+.social{
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    padding-left: 0;
+
+}
+
+.social-item{
+    margin-right: 20px;
+}
+
+.social-link {
+    display: block;
+    width: 45px;
+    height: 40px;
+    border: 2px solid #66c05d;
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.social-youtube{
+    background-image: url(../img/youtube.svg);
+}
+
+.social-vk{
+    background-image: url(../img/vk.svg);
+}
+
+.social-instagram{
+    background-image: url(../img/instagram.svg);
+}
+
+.social-fb{
+    background-image: url(../img/facebook.svg);
+}
+
+.footer-bottom{
+    display:flex;
+    justify-content: space-between;
+    color: #828282;
+    padding: 15px 0
+}
+
+.footer-bottom p{
+    margin: 0;
+}
+
+.footer-bottom a{
+    color: #828282;
+    text-decoration: none;
+}
+
